// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty list 1`] = `
<React.Fragment>
  <h1>
    Events
  </h1>
  Immutable.List []
</React.Fragment>
`;

exports[`renders list of events 1`] = `
<React.Fragment>
  <h1>
    Events
  </h1>
  Immutable.List [
    <li>
      event-1
    </li>,
    <li>
      event-2
    </li>,
  ]
</React.Fragment>
`;
